<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:gravity="center"
            android:textColor="#016C4E"/>

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="15dp"
            android:textColor="#016C4E"
            android:textSize="25sp"
            android:fontFamily="Roboto"
            />
        <EditText
            android:id="@+id/fieldEmail"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/hint_email"
            android:textColorHint="#000000"
            android:background="@drawable/custombutton"
            android:textSize="16sp"
            android:fontFamily="Roboto"
            />
        <EditText
            android:id="@+id/fieldPassword"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:importantForAutofill="no"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:background="@drawable/custombutton"
            android:textSize="16sp"
            android:fontFamily="Roboto"/>
        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:textColor="#FFFBF6"
            android:textSize="14sp"
            android:fontFamily="Roboto"/>
        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton3"
            android:fontFamily="Roboto"
            android:text="@string/already_have_account"
            android:textAllCaps="false"
            android:textColor="#333"
            android:textSize="14sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>